--- a/preamble.tex
+++ b/preamble.tex
@@ -14,7 +14,7 @@
 \usepackage{siunitx}
 \usepackage{amsmath,amssymb}
 \usepackage{bm}
-\usepackage{mhchem,chemfig,chemmacros}
+\usepackage{mhchem,chemfig}
 \usepackage[hidelinks]{hyperref}
 
 \MakeOuterQuote{"}
@@ -70,6 +70,7 @@
     rddbond/.style={decorate,decoration={ddbond,mirror}}
 }
 
+\newcommand{\pKa}{\text{p}K_\text{a}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\e}[1][]{\text{e}^{#1}}
 
