--- a/Notes/Week9/week9.tex
+++ b/Notes/Week9/week9.tex
@@ -10,7 +10,7 @@
 
 
 \chapter{Oxidation/Reduction and Organometallics}
-\section{Oxidation/Reduction of Carbonyls}
+\section{Reduction of Carbonyls}
 \begin{itemize}
     \item \marginnote{3/8:}In general chemistry, oxidation and reduction referred to the loss and gain of electrons, respectively.
     \begin{itemize}
@@ -297,6 +297,67 @@
             \item They are 40\% ionic; Grignards are much less.
         \end{itemize}
         \item Very reactive (nucleophile and base), but very dangerous, too.
+    \end{itemize}
+\end{itemize}
+
+
+
+\section{Chapter 12: Alcohols from Carbonyl Compounds}
+\emph{From \textcite{bib:SolomonsEtAl}.}
+\begin{itemize}
+    \item \marginnote{3/10:}Together, reduction of carbonyls and modification by Grignards and organolithium reagents fall under the category of \textbf{nucleophilic addition}.
+    \item There exist lowest and highest oxidation states of an organic compound.
+    \begin{figure}[H]
+        \centering
+        \footnotesize
+        \schemestart
+            \chemfig{RCH_3}
+            \arrow{<=>[[O]][[H]]}
+            \chemfig{R-[:30](-[2]OH)(-[:-30]H)(-[:-60]H)}
+            \arrow{<=>[[O]][[H]]}
+            \chemfig{R-[:30](=[2]O)(-[:-30]H)}
+            \arrow{<=>[[O]][[H]]}
+            \chemfig{R-[:30](=[2]O)(-[:-30]OH)}
+        \schemestop
+        \caption{Oxidation state spectrum.}
+        \label{fig:spectrumOxidationStates}
+    \end{figure}
+    \begin{itemize}
+        \item Note that we use [H] to indicate in a general way that a molecule has been reduced and vice versa for [O].
+    \end{itemize}
+    \item "Oxidation of an organic compound may be more broadly defined as a reaction that increases its content of any element more electronegative than carbon" \parencite[537]{bib:SolomonsEtAl}.
+    \item \ce{LiAlH4} is also denoted by the acronym LAH.
+    \item Since LAH reacts violently with proton donors to release hydrogen gas, \ce{NaBH4} is a much safer (and therefore preferable) reagent for reducing aldehydes and ketones.
+    \begin{itemize}
+        \item Importantly, it can be used along with protic solvents.
+        \item LAH is typically used in \ce{Et2O}. After the reaction is complete, \ce{EtAc} is added cautiously to decompose remaining LAH and then water to decompose the alumina complex, rendering it inert.
+    \end{itemize}
+    \item Aldehydes and ketones can also be reduced via \ce{H2 + Pd/C} (hydrogen and a metal catalyst) and \ce{Na${}^\circ$ + ROH} (sodium metal in an alcohol solvent).
+    \item Almost all types of alkyl halides can be reduced by \ce{LiAlH4} in ether followed by sulfuric acid in water.
+    \begin{itemize}
+        \item Note that the proton comes from \ce{LiAlH4}, so we may use \ce{LiAlD4} to replace the halide with deuterium.
+    \end{itemize}
+    \item Primary and secondary alcohols can be reduced to carbonyl compounds, but tertiary ones cannot.
+    \begin{itemize}
+        \item This is because we need a hydrogen on the $\alpha$-carbon to lose along with the hydrogen from the alcohol group.
+    \end{itemize}
+    \item Oxidation of alcohols.
+    \item \textbf{Organometallic compound}: A compound that contains a carbon-metal bond.
+    \item \ce{C-M} bonds are largely ionic when $\ce{M}=\ce{Na, K}$, are largely covalent when $\ce{M}=\ce{Pb, Sn, Hg, Ti}$, and are in between when $\ce{M}=\ce{Mg, Li}$.
+    \item Reactivity of organometallics increases with increasing ionic character.
+    \begin{itemize}
+        \item Alkylsodium an alkylpotassium compounds are among the most powerful of bases, but also react explosively with water and burst into flame when exposed to air.
+        \item The more stable ones may only be volatile in air, but are still highly poisonous (e.g., \ce{Et4Pb}, the infamous antiknock compound formerly used in leaded gasoline).
+    \end{itemize}
+    \item Most Grignards exist in equilibrium between an alkylmagnesium halide and a dialkyl magnesium.
+    \begin{equation*}
+        \ce{2RMgX <=> R2Mg + MgX2}
+    \end{equation*}
+    \item Grignards in their alkylmagnesium halide state also form a complex with their aprotic solvent, attracting electron pairs in two partial bonds to their positive magnesium.
+    \item A Grignard reagent behaves like a strong base and reacts to form a weak conjugate acid (such as its protonated or otherwise alkylated form).
+    \item Grignard reagents can even deprotonate terminal alkynes.
+    \begin{itemize}
+        \item This serves as a method of production of alkynylmagnesium halides and alkynyllithiums, though.
     \end{itemize}
 \end{itemize}
 
