--- a/Notes/Week9/week9.tex
+++ b/Notes/Week9/week9.tex
@@ -682,7 +682,24 @@
         \item This is because we need a hydrogen on the $\alpha$-carbon to lose along with the hydrogen from the alcohol group.
     \end{itemize}
     \item Oxidation of alcohols.
-    \item \textbf{Organometallic compound}: A compound that contains a carbon-metal bond.
+    \begin{itemize}
+        \item \marginnote{3/11:}"Primary alcohols can be oxidized to aldehydes, and aldehydes can be oxidized to carboxylic acids" \parencite[542]{bib:SolomonsEtAl}.
+        \item "Secondary alcohols can be oxidized to ketones" \parencite[542]{bib:SolomonsEtAl}.
+        \item "Tertiary alcohols cannot be oxidized to carbonyl compounds" \parencite[542]{bib:SolomonsEtAl}.
+    \end{itemize}
+    \item The common mechanistic theme of alcohol oxidation by elimination.
+    \begin{itemize}
+        \item We attach a leaving group to the hydroxyl oxygen and deprotonate.
+        \item Attacking an $\alpha$-hydrogen subsequently causes elimination of that hydrogen and the leaving group; the hydrogen's electrons become the double bond.
+    \end{itemize}
+    \item The Swern oxidation is usually carried out at low temperatures.
+    \item Chromic acid (\ce{H2CrO4}) oxidation is discussed, but in a mechanistically different manner to that presented in class.
+    \item Chromic acid is orange-red, but Cr(III) (in the product mixture) is greenish blue. Thus, reagents like Jones reagent can serve as a color-based test for the presence of functional groups including primary and secondary alcohols and aldehydes.
+    \begin{itemize}
+        \item This color change was the basis of the original brethalyzer test.
+    \end{itemize}
+    \item Since PCC is soluble in solvents other than water (e.g., \ce{CH2Cl2}), it can be used for the necessarily anhydrous monooxidations of alcohols.
+    \item \marginnote{3/10:}\textbf{Organometallic compound}: A compound that contains a carbon-metal bond.
     \item \ce{C-M} bonds are largely ionic when $\ce{M}=\ce{Na, K}$, are largely covalent when $\ce{M}=\ce{Pb, Sn, Hg, Ti}$, and are in between when $\ce{M}=\ce{Mg, Li}$.
     \item Reactivity of organometallics increases with increasing ionic character.
     \begin{itemize}
